--- a/website/templates/cheese_id.html
+++ b/website/templates/cheese_id.html
@@ -41,7 +41,7 @@
                     <p><strong>Country:</strong> {{ cheese.country }}</p>
                     <p class="description"><strong>Description:</strong> {{ cheese.description }}</p>
                     <div id="nutrition-facts", data-name="{{ cheese.name }}"> </div>
-                    <a href="/recipes/{{ cheese.id }}&{{ chesse.name }}">
+                    <a href="/recipes/{{ cheese.id }}&{{ cheese.name }}">
                         <button id="cheese-id-button">See Recipes</button>
                     </a>
                 </div>
