--- a/website/templates/types.html
+++ b/website/templates/types.html
@@ -39,7 +39,7 @@
                     <li><input type="checkbox" id="texture-fresh"><label for="texture-fresh">fresh</label></li>
                     <li><input type="checkbox" id="texture-soft"><label for="texture-soft">soft</label></li>
                     <li><input type="checkbox" id="texture-semi-soft"><label for="texture-semi-soft">semi-soft</label></li>
-                    <li><input type="checkbox" id="texture-semi-hard"><label for="texture-semi-hard">semi-sard</label></li>
+                    <li><input type="checkbox" id="texture-semi-hard"><label for="texture-semi-hard">Semi-hard</label></li>
                     <li><input type="checkbox" id="texture-hard"><label for="texture-hard">hard</label></li>
                     <li><input type="checkbox" id="texture-blue"><label for="texture-blue">blue</label></li>
                 </ul>
