Life is better with cheese!

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -86,8 +86,7 @@
     </main>
     
     <footer>
-        <p>Contact us: testemail@noemail.com +21260000000<br>
-        00, No Street, Casablanca, Morocco</p>
+        <p>Life is better with cheese!</p>
     </footer>
 </body>
 </html>
