--- a/website/static/styles/about.css
+++ b/website/static/styles/about.css
@@ -2,34 +2,18 @@
 
 /* General styles */
 body {
-    font-family: 'Roboto', sans-serif;
+    
     background-color: linear-gradient(45deg, #f2e5d6, #f89925); /* Retain existing background color */
     margin: 0;
     padding: 0;
 }
 
 header {
-    font-family: 'Roboto', sans-serif;
+    
     background-color: rgb(255, 248, 195);
     height: 100px;
     width: 100%;
-    padding: 20px; /* Add padding for better spacing */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
-}
-
-footer {
-    background-color: white;
-    font-family: 'Roboto', sans-serif;
-    color: #ed861f;
-    height: 60px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
 }
 
 /* Flexbox for header content alignment */
@@ -64,7 +48,7 @@ nav ul li {
 }
 
 nav ul li a {
-    font-family: 'Roboto', sans-serif; /* Apply Roboto font */
+     /* Apply Roboto font */
     text-decoration: none; /* Remove underline */
     color: rgb(0, 0, 0); /* Adjust link color */
     font-weight: bold; /* Adjust font weight */
@@ -86,7 +70,7 @@ main {
 
 /* Update font for sections */
 h2 {
-    font-family: 'Roboto', sans-serif; /* Apply Roboto font */
+     /* Apply Roboto font */
     font-weight: 700; /* Make font bold */
     color: rgb(4, 26, 93); /* Adjust font color */
     margin-bottom: 20px; /* Add margin at the bottom for spacing */
@@ -115,14 +99,14 @@ h2::after {
 }
 
 p {
-    font-family: 'Roboto', sans-serif; /* Apply Roboto font */
+     /* Apply Roboto font */
     color: black; /* Set text color to black */
     text-shadow: 0 0 5px rgba(232, 85, 0, 0.232);  /* Adjust font color */
     margin-bottom: 20px; /* Add margin at the bottom for spacing */
 }
 
 a {
-    font-family: 'Roboto', sans-serif; /* Apply Roboto font */
+     /* Apply Roboto font */
     color: #ed861f; /* Adjust link color */
     text-decoration: none; /* Remove underline */
     transition: color 0.3s; /* Add smooth transition for color */
