--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../static/styles/style1.css">
         <link rel="stylesheet" href="../static/styles/about.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet' type='text/css'>
     </head>
     <body style="margin: 0px; padding: 0px;">
         <header>
@@ -47,5 +48,9 @@
             
         </main>
 
+        <footer>
+            <p>Life is better with cheese!</p>
+        </footer>
     </body>
+    
 </html>
