--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="../static/styles/style1.css">
     <link rel="stylesheet" href="../static/styles/polygon.css">
     <link rel="stylesheet" href="../static/styles/main_im.css">
-    <link rel="stylesheet" href="../static/styles/svg.css">
+    <link rel="stylesheet" href="../static/styles/svg.css">  
     <script src="../static/scripts/tooltip.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
 </head>
 
-<body style="margin: 0px; padding: 0px;">
+<body class="home-page" style="margin: 0px; padding: 0px;">
     <header>
         <div class="header-content">
             <div class="logo-container">
